# QuantumAI-VM

./: CMakeLists.txt  README.md
 scripts/: build.sh  deploy.sh  run_tests.sh
docs/: tutorial.md  user_guide.md
include/: AIAnomalyDetector.hpp  AIOptimizer.hpp  AIScaler.hpp  AISelfOptimizer.hpp  AutoCodeOptimizer.hpp  AutonomousOptimizer.hpp  Blockchain.hpp  BlockchainManager.hpp  BlockchainSecurity.hpp  BytecodeLoader.hpp  CheckpointManager.hpp  CloudExecution.hpp  CloudExecutor.hpp  CloudOffloader.hpp  EdgeComputing.hpp  EdgeExecutor.hpp  ExecutionEngine.hpp  ExecutionManager.hpp  GPUExecution.hpp  GPUExecutor.hpp  InstructionSet.hpp  JITCompiler.hpp  MemoryManager.hpp  PredictiveExecutionAI.hpp  QuantumProcessor.hpp  SelfHealingAI.hpp  ThreadPool.hpp  VM.hpp
src/: AIScaler.cpp  AutonomousOptimizer.cpp  BytecodeLoader.cpp  CheckpointManager.cpp  CloudExecution.cpp  CloudExecutor.cpp  CloudManager.cpp  CloudManager.h  CloudOffloader.cpp  EdgeComputing.cpp  EdgeExecutor.cpp  EdgeNodeManager.cpp  EdgeNodeManager.h  ExecutionEngine.cpp  ExecutionManager.cpp  GPUExecution.cpp  GPUExecutor.cu  JITCompiler.cpp  MemoryManager.cpp  PredictiveExecutionAI.cpp  SelfHealingAI.cpp  ThreadPool.cpp  VM.cpp  VM.h  main.cpp
tests/: AIAnomalyDetector.cpp  AIOptimizer.cpp  AISelfOptimizer.cpp  AutoCodeOptimizer.cpp  Blockchain.cpp  BlockchainManager.cpp  BlockchainSecurity.cpp  QuantumProcessor.cpp
